--- a/src/index.css
+++ b/src/index.css
@@ -47,14 +47,14 @@
 /* Login Page */
 
 #login-page {
-  background-image: linear-gradient(#40a9ff, #096dd9);
+  background-image: linear-gradient(to right,#40a9ff, #096dd9);
   position: absolute; 
   top: 0px;
   bottom: 0px;
   left: 0px;
   right: 0px;
 }
-
+/* dfafafaf */
 #login-card {
   position: relative;
   top: calc(50vh - 204px);    
