--- a/src/index.css
+++ b/src/index.css
@@ -77,8 +77,15 @@
   padding: 12px;
   border-radius: 8px;
   display: inline-block;  
-}
+  transition-duration: 0.25s;
+  border: 1px white solid;
 
+}
+.login-button:hover{
+  background-color: white;
+  color: black;
+  border: 1px black solid;
+}
 .facebook {
   background-color: #3b5998;
 }
